<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.Sobre_nosotros"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#fff"
        android:padding="30dp">

    <TextView
        android:id="@+id/Sobre_nosotros"
        android:text="@string/Sobre_nosotros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35dp"
        android:textColor="#ffff"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/OptimusWeb"
        android:text="@string/OptimusWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ffff"
        android:background="@color/colorPrimary"
        android:textSize="30dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logooptimus"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/TextoSobreNostoros"
        android:text="@string/TextoSobreNostoros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="18dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>