<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FragmentosAdmin.Contacto">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">


        <TextView
            android:id="@+id/Contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/letrauno"
            android:gravity="center"
            android:text="@string/Contacto"
            android:textColor="#000"
            android:textSize="30dp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="instagram.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="false"/>

        <TextView
            android:id="@+id/Instagram"
            android:text="@string/Instagram"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="facebook.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="false" />

        <TextView
            android:id="@+id/Facebook"
            android:text="@string/Facebook"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="correo.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="false" />

        <TextView
            android:id="@+id/Email"
            android:text="@string/Email"
            android:textSize="18dp"
            android:gravity="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>