<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".ConAlcohol.AgregarConAlcohol">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/NombreConAlcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/NombreConAlcohol"
                android:hint="@string/NombreConAlcohol"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:minHeight="50dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:src="@drawable/vista_ico"/>

                <TextView
                    android:id="@+id/VistaConAlcohol"
                    android:text="@string/VistaConAlcohol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="15dp"
                    />



            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/im_ico"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/PublicarConAlchol"
            android:text="@string/PublicarConAlchol"
            android:layout_width="match_parent"
            android:background="@drawable/btn_personalizado_cuatro"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            android:textSize="25dp"
            android:layout_height="60sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>