<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.Categorias"
    android:background="@color/color1">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarB"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#131f30"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingTop="50dp"
        android:text="@string/Categorias"
        android:textColor="@color/cardview_light_background"
        android:textSize="35sp"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <!--Con alcohol-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/con_alcohol" />
            <!--botón1-->
            <Button
                android:id="@+id/CoctelCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_personalizado_cuatro"
                android:gravity="center"
                android:text="@string/Coctelca"
                android:textColor="#ffffff"
                android:textSize="18dp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--Sin alcohol-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/sin_alcohol" />
            <!--botón2-->
            <Button
                android:id="@+id/ColctelSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_personalizado_cuatro"
                android:gravity="center"
                android:text="@string/Colctelsa"
                android:textColor="#ffffff"
                android:textSize="18dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="600dp"
        android:background="@color/colorPrimary"

        android:src="@drawable/carga"

        ></ImageView>


</FrameLayout>